--- a/templates/views/decider/game.hbs
+++ b/templates/views/decider/game.hbs
@@ -1,7 +1,6 @@
 <div id="login" class="col-sm-12">
 
-  <img src="http://res.cloudinary.com/engagement-lab-home/image/upload/e_grayscale/v1454520474/site/listings/odr1jt3rfkda0s1qce9q.png" height='auto' width='200px'>
-  <p style="width:20%; margin-left:40%;">Welcome to At Stake: a deliberation game! You will need 3-4 players.</p>
+  <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1490382079/at-stake/s-t-a-k-e-l-o-g-o_3x.png" height='auto' width='200px'>
 
   <div class="submission col-sm-6">
       <div class="form">
