--- a/public/styles/_core/lobby.scss
+++ b/public/styles/_core/lobby.scss
@@ -112,12 +112,37 @@
 
 		.username {
 			margin-bottom: 40px;
+			font-family: AvenirNext;
+		  font-weight: bold;
+		  font-style: normal;
+		  font-stretch: normal;
+		  line-height: 1;
+		  letter-spacing: -1.9px;
+		  text-align: center;
+		  color: $color-white;
+		  
+
 			h2 {
-				font-size: 24px;
+				font-size: 32px;
+				font-weight: 500;
+				text-shadow: 0 2px 2px rgba(0, 0, 0, 0.24);
+
+			  span {
+			  	font-family: AvenirNext-Medium;
+			  	font-weight: 700;
+			  }
 			}
 			p {
-				font-size: 12px;
+				font-family: AvenirNext;
+			  font-size: 20px;
+			  font-weight: 500;
+			  font-style: normal;
+			  font-stretch: normal;
+			  line-height: 0.8;
+			  letter-spacing: 0px;
+			  text-align: center;
 			}
+
 
 		}
 
@@ -138,6 +163,12 @@
 					line-height: 48px;
 					margin:0px;
 					margin-bottom: 10px;
+					font-family: AvenirNext-Bold;
+				  font-weight: bold;
+				  font-style: normal;
+				  font-stretch: normal;
+				  letter-spacing: 0px;
+				  text-align: center;
 				}
 
 				&#btn_new_game {
@@ -159,6 +190,7 @@
 				margin: 15% auto;
 				margin-top: 0px;
 				font-size: 10px;
+				color: lighten($background-color, 20%);
 			}
 		}
 
@@ -172,7 +204,7 @@
 
 		img {
 			// height: 136px;
-			width: 200px;
+			width: 300px;
 			padding: 10px;
 			margin-top: 16px;
 		}
@@ -256,10 +288,11 @@
 
 		#description p {
 			font-size: 12px;
-			width:98%;
+			line-height: 16px;
+			width: 90%;
 			color: $color-white;
 			margin: 1% auto;
-			text-align: center;
+			text-align: justify;
 			margin-top:30px;
 		}
 		#btn_submit_name {
@@ -273,10 +306,36 @@
 			font-size: 24px;
 			margin-bottom: 10%;
 			margin-top: 5%;
+			font-family: AvenirNext-Bold;
+		  font-size: 24px;
+		  font-weight: bold;
+		  font-style: normal;
+		  font-stretch: normal;
+		  line-height: 1;
+		  letter-spacing: 0px;
+		  text-align: center;
 		}
 	}
 
 	#join.lobby {
+
+		p {
+			font-family: AvenirNext;
+		  font-size: 12px;
+		  font-weight: 200;
+		  font-style: normal;
+		  font-stretch: normal;
+		  line-height: 1.33;
+		  letter-spacing: 0px;
+		  text-align: center;
+		  color: white;
+
+		  span {
+		  	font-weight: 700;
+		  	font-family: AvenirNext-Bold;
+		  	color: white;
+		  }
+		}
 
 		.login {
 			padding-top: 10%;
@@ -333,6 +392,14 @@
 			background: -webkit-linear-gradient(top, $orange-light 90%, $orange-dark 10%); /* Chrome10-25,Safari5.1-6 */
 			background: linear-gradient(to bottom, $orange-light 90%, $orange-dark 10%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 			position: relative;
+		  font-family: AvenirNext;
+		  font-size: 20px;
+		  font-weight: bold;
+		  font-style: normal;
+		  font-stretch: normal;
+		  line-height: 1;
+		  letter-spacing: 0px;
+		  text-align: center;
 		}
 
 
