--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -5,6 +5,7 @@
 	height: 100%;
 	text-align: center;
 	padding: 8px;
+	padding-top: 40px;
 	color: white;
 
 	// During the gameplay
@@ -19,6 +20,17 @@
 
 	}
 
+}
+
+// Default button shadow and margin
+.btn { 
+	box-shadow: 0px 7px 0px 0px darken($background-color, 10%);
+	margin-bottom: 7px;
+
+	&:hover, &:focus, &:visited {
+		box-shadow: 0px 7px 0px 0px darken($background-color, 10%);
+		margin-bottom: 7px;
+	}
 }
 
 .header {
@@ -151,9 +163,9 @@ input.post-button {
   line-height: 0;
   top: 0px;
   height: 50px;
-  padding-top:8px;
-  padding-left:0;
-  padding-right:0;
+  padding-top:20px;
+  padding-left:5px;
+  padding-right:5px;
 
   &:after {
 	  content: "";
@@ -216,8 +228,9 @@ input.post-button {
     display: block;
 		z-index: 0;
     height: 5px;
-    width: 100%;
-    top: 47%;
+    width: 95%;
+    top: 68%;
+    left: 10px;
     &:after {
     	content: "";
     }
