Added scoring phase, fixes for decide phase, game now able to advance rounds, some small animation and layout fixes.

--- a/public/styles/_core/lobby.scss
+++ b/public/styles/_core/lobby.scss
@@ -65,7 +65,7 @@
 
 		// Show back button on login screen
 		.back-button {
-			display: block;
+			display: none;
 			position: absolute;
 			left: 0;
 			bottom: 0;
