--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -73,7 +73,7 @@
                     <div class="disabled icon"><img src="/images/layout/stageicons/brainstorm.svg"/><span>brainstorm</span></div>
                     <div class="disabled icon"><img src="/images/layout/stageicons/pitch.svg"/><span>pitch</span></div>
                     <div class="disabled icon"><img src="/images/layout/stageicons/deliberate.svg"/><span>deliberate</span></div>
-                    <div class="disabled icon"><img src="/images/layout/stageicons/grandstand.svg"/><span>grandstand</span></div>
+                    {{!-- <div class="disabled icon"><img src="/images/layout/stageicons/grandstand.svg"/><span>grandstand</span></div> --}}
                     <div class="disabled icon"><img src="/images/layout/stageicons/decide.svg"/><span>decide</span></div>
                    <div class="disabled icon"> <img src="/images/layout/stageicons/score.svg"/><span>score</span></div>
             </section>
