--- a/templates/partials/component/speech.hbs
+++ b/templates/partials/component/speech.hbs
@@ -20,7 +20,13 @@
 	  
 	  {{#ifeq decider true}}
 		  {{#ifeq decider_next_disabled undefined}}
-	    <button class="next-step submit" data-event="{{nextEvent this}}">{{#ifeq timer true}}Start Timer{{else}}next{{/ifeq}}</button>
+			  
+			  {{#ifeq timer true}}
+			    <button class="next-step timer submit" data-event="{{nextEvent this}}">Start Timer</button>
+			  {{else}}
+			    <button class="next-step submit" data-event="{{nextEvent this}}">next</button>
+			  {{/ifeq}}
+
 		  {{/ifeq}}
 	  {{/ifeq}}
 	</blockquote>
