--- a/templates/partials/shared/decide.hbs
+++ b/templates/partials/shared/decide.hbs
@@ -121,6 +121,14 @@
 				
 		}}
 
+		<div id="chosen" class="hidden-el">
+			The decider accepted your agenda item (+{coins})
+		</div>
+
+		<div id="not-chosen" class="hidden-el">
+		The decider did not accept your agenda item
+		</div>
+
 		{{> component/speech 
 				decider=true
 				decider_next_disabled=true
