--- a/templates/partials/shared/scoreboard.hbs
+++ b/templates/partials/shared/scoreboard.hbs
@@ -24,7 +24,7 @@
 
 		{{/ifeq}}
 
-<div class="form row" id="decider">
+	<div class="form row decider">
     <input id="btn-next" data-event="game:next_round" class="submit" type="submit" name="submit" value="next round">
 	</div>
 
