--- a/public/styles/core.scss
+++ b/public/styles/core.scss
@@ -39,6 +39,15 @@ button, input {
 	}
 }
 
+.regular-font {
+	font-size:12px;
+
+}
+
+.medium-font {
+	font-size: 16px;
+}
+
 .text.centered {
 	text-align:center;
 }
