--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -57,7 +57,7 @@
       </section>
       
       <div class="error">Error!</div>
-      <button class="back-button" data-from="new" data-to="choices-new">back</button>
+      <button class="back-button" data-from="new" data-to="choices">back</button>
       <input id="btn_submit" class="button_text game_login" type="submit" name="submit" value="next">
     </div>
 
