--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -93,11 +93,6 @@ var setupScreen = function() {
     currentScreenIndex = 0;
 
     $(isDecider ? '.player' : '.decider').remove();
-{{!-- 
-    if ($('#gameContent').hasClass('login'))
-        $('#gameContent').removeClass('login');
-    else if ($('#gameContent').hasClass('player-grid'))
-        $('#gameContent').removeClass('player-grid'); --}}
 
     $('#gameContent').addClass('in-game');
     $('#stages-bar').show();
@@ -276,14 +271,14 @@ socketEvents = function(eventId, eventData) {
             else if(currentPlayers.length < playersNeeded)
                 startAnim.reverse();
 
-            $('#players').empty();
+            $('.player-grid .list').empty();
 
             _.each(currentPlayers, function(player, index) {
 
                 var nameFormatted = (player.name.length <= 15) ? player.name : player.name.substring(0, 15) + "...";
                 var index = player.icon;
 
-                $('#players').append('<div id="player-' + index + '" class="col-sm-12 player-logo col-centered"><p>' + nameFormatted + '</p></div>');
+                $('.player-grid .list').append('<div id="player-' + index + '" class="col-sm-12 player-logo col-centered"><p>' + nameFormatted + '</p></div>');
 
             });
 
