--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -76,7 +76,7 @@
           <h1 id="name"></h1>
           <span id="description"></span>
         </div>
-        <div class="row" id="players">
+        <div class="row list">
         </div>
       </div>
 
@@ -92,7 +92,7 @@
 
     <div class="login input">
       <input type="text" id="access_code" placeholder="Type your room code here" maxlength="4"> <br />
-      <p class="light">...then <span>press the join game</span> button to begin!</p>
+      <p class="light instructions">...then <span>press the join game</span> button to begin!</p>
       <div class="error">Error!</div>
 
       <button class="back-button" data-from="join" data-to="choices">back</button>
@@ -103,10 +103,10 @@
       <div id="game_code"> 
         <h1>Share Your Room Code</h1>
         <h1 class="access-code"></h1>
-        <p>Share this 4 digit code with players. Once at least 3 players have joined, press the start button to play</p>
+        <p class="instructions">Share this 4 digit code with players. Once at least 3 players have joined, press the start button to play</p>
       </div>
       <div class="player-grid">
-        <div class="row" id="players">
+        <div class="row list">
         </div>
       </div>
     </div>
